chore: update application name and build step in deployment configuration

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tecno-aging_v2",
+  "name": "ivcf-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -18,9 +18,9 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/src/main.js",
     "start:pm2": "pm2 start ecosystem.config.js",
-    "stop:pm2": "pm2 stop tecno-aging-api",
-    "restart:pm2": "pm2 restart tecno-aging-api",
-    "logs:pm2": "pm2 logs tecno-aging-api",
+    "stop:pm2": "pm2 stop ivcf-api",
+    "restart:pm2": "pm2 restart ivcf-api",
+    "logs:pm2": "pm2 logs ivcf-api",
     "setup:prod": "npm install && npm run build && npm run prisma:generate && npm run migrate:deploy",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
