chore: enable debug mode in deployment configuration

--- a/.github/workflows/dev-deploy.yml
+++ b/.github/workflows/dev-deploy.yml
@@ -66,6 +66,7 @@ jobs:
           remote_host: ${{ secrets.SSH_HOST }}
           remote_user: ${{ secrets.SSH_USER }}
           remote_key: ${{ secrets.SSH_KEY }}
+          debug: 'true'
 
       # ----------------------------------------
       # Pós-deploy no servidor
