chore: update .env.example

--- a/env.example
+++ b/env.example
@@ -28,6 +28,7 @@ BCRYPT_ROUNDS=12
 
 # Swagger Configuration (for development)
 SWAGGER_ENABLED=false
+SWAGGER_PATH="backend/api-docs"
 
 # Health Check Configuration
 HEALTH_CHECK_TIMEOUT=5000
