--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.10",
-    "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.2.0",
+    "@prisma/config": "^7.4.1",
     "@types/cookie-parser": "^1.4.10",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
@@ -74,6 +74,7 @@
     "@faker-js/faker": "^10.1.0",
     "@nestjs/cli": "^11.0.14",
     "@nestjs/schematics": "^11.0.0",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/testing": "^11.1.10",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
